# agent_status_board

./: .gitignore  CLAUDE.md  Makefile  README.md  STATUS_RULES.md  agent_status_surface.md  clear_events.py  prefs.txt  pyproject.toml  server.py  smoke_events.sh  test_server.py
agent_status_board/: cli.py  server.py
scripts/: run.sh
